# caps-starter-template

./: README.md  pyproject.toml
lib/core/sdk/: dto.py  models.py
