[tool.poetry]
name = "caps-starter-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "lib"}]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.20"
SQLAlchemy-Utils = "^0.41.1"
alembic = "^1.12.0"
pytest-env = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
mypy = "^1.5.1"
black = "^23.9.1"
dependency-injector = "^4.41.0"
python-dotenv = "^1.0.0"
pre-commit = "^3.4.0"

[tool.pytest.ini_options]
env = [
    "THIS_PROJECT_ROOT_DIRECTORY=./tests/mocks",
    "THIS_PROJECT_SOURCE_DATA_DIR=source_data",
    "THIS_PROJECT_RDBMS_HOST=localhost",
    "THIS_PROJECT_RDBMS_PORT=5432",
    "THIS_PROJECT_RDBMS_DBNAME=capdb-test",
    "THIS_PROJECT_RDBMS_USERNAME=sqldbms",
    "THIS_PROJECT_RDBMS_PASSWORD=sqldbms",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

